[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "librenms-handler"
version = "0.4.2"
authors = [
    { name="James Whale", email="james@james-whale.com" },
]
description = "A Python library to interact with the LibreNMS API (v0)"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "requests"
]

[project.urls]
"Homepage" = "https://github.com/WhaleJ84/librenms_handler"
"Bug Tracker" = "https://github.com/WhaleJ84/librenms_handler/issues"

[tool.pylint.FORMAT]
max-line-length=120
min-similarity-lines=5

[tool.pylint.'MESSAGES CONTROL']
disable=['W3101']
